--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ main.wrap {
    ======================================== */
 
 .taglines {
-  font-size: clamp(1.125rem, 3.8vw, calc(var(--type-p1) + 1rem));
+  font-size: clamp(1.5rem, 4vw, calc(var(--type-p1) + 1.8rem));
   text-align: center;
   line-height: 1.2;
   margin: 2rem 0 0.375rem;
@@ -460,6 +460,24 @@ main.wrap {
 .project p a {
   font-weight: 500;
   text-decoration: underline;
+}
+
+.project ul {
+  margin: 0;
+  padding-top: 1.5rem;
+  padding-left: 1.5rem;
+  color: var(--muted);
+  font-size: clamp(1.125rem, 2vw, 2rem);
+  line-height: 1;
+}
+
+.project ul li {
+  margin-bottom: 0.25rem;
+}
+
+#about-text {
+  color: var(--muted);
+  font-size: clamp(1.125rem, 2vw, 2rem);
 }
 
 /* Chips/tags */
