Changed project media to contain instead of cover

--- a/styles.css
+++ b/styles.css
@@ -374,11 +374,10 @@ main.wrap {
   justify-content: flex-end;
 }
 
+
 /* Media column */
 .projects-grid .media {
   display: flex;
-  align-items: center;
-  justify-content: center;
   overflow: hidden;
   border-radius: calc(var(--radius) * 1.2);
   padding: 0;
@@ -389,23 +388,8 @@ main.wrap {
 .projects-grid .media video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: calc(var(--radius) * 1.2);
-}
-
-#familiars-media {
-  aspect-ratio: 6 / 11;
-  justify-self: center;
-}
-
-#breakroom-media{
-  aspect-ratio: 1 / 1;
-  justify-self: center;
-}
-
-#surface-changer-media{
-   aspect-ratio: 1 / 1;
-  justify-self: center; 
 }
 
 .projects-grid .mediaPlaceholder {
