--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   --radius: 1.5rem;
   --max: 150rem;
   --profile-edge-gap: 2.25rem;
-  --content-top-gap: clamp(rem, 4vw, 2.625rem);
+  --content-top-gap: clamp(1rem, 4vw, 2rem);
   
   /* Spacing scale */
   --space-xs: 0.5625rem;
@@ -96,7 +96,7 @@ a:hover {
 .wrap {
   max-width: var(--max);
   margin: 0 auto;
-  padding: 0.375rem clamp(1%, 4vw, 6%);
+  padding: 0.7rem clamp(1%, 4vw, 6%);
 }
 
 main.wrap { 
@@ -137,7 +137,7 @@ main.wrap {
 
 #brand-subtitle {
   margin: 0;
-  font-size: clamp(.9rem, 2.8vw, var(--type-p2));
+  font-size: clamp(.9rem, 2.8vw, calc(var(--type-p2) + .4rem));
   line-height: 1.2;
   color: var(--muted);
 }
