--- a/styles.css
+++ b/styles.css
@@ -216,6 +216,11 @@ main.wrap {
   margin: 0 0 2.625rem 0;
 }
 
+.showreel-media {
+  position: relative;
+  width: 100%;
+}
+
 .tagline {
   display: flex;
   flex-direction: column;
@@ -388,6 +393,7 @@ main.wrap {
   border-radius: calc(var(--radius) * 1.2);
   padding: 0;
   min-height: 18.75rem;
+  position: relative;
 }
 
 .projects-grid .media img,
@@ -396,6 +402,21 @@ main.wrap {
   height: 100%;
   object-fit: contain;
   border-radius: calc(var(--radius) * 1.2);
+}
+
+/* Poster overlay that fades out when video is ready */
+.showreel-media .media-poster,
+.projects-grid .media .media-poster {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  pointer-events: none;
+  transition: opacity 10ms ease-in-out;
+  z-index: 1;
+  border-radius: var(--radius);
 }
 
 #familiars-media video {
